--- a/client/src/index.html
+++ b/client/src/index.html
@@ -18,7 +18,7 @@
 						<button class="btn btn--search">
 							<i class="fas fa-search"></i>
 						</button>
-					<input type="text" placeholder="Search for something">
+					<input type="text" class="header__input" placeholder="Search for something">
 				</section>
 				<section class="header__alerts">
 					<i class="fas fa-plus"></i>
@@ -43,7 +43,7 @@
 					<span>FABIO PITTE</span>
 				</li>
 				<li>
-					<div class="ico-menu">
+					<div class="ico-menu arrow">
 						<i class="fas fa-home"></i>
 					</div>
 					<span>home</span>
@@ -55,7 +55,7 @@
 					<span>skills</span>
 				</li>
 				<li>
-					<div class="ico-menu arrow">								
+					<div class="ico-menu">								
 						<i class="fab fa-grunt"></i>
 					</div>
 					<span>professional</span>
@@ -68,6 +68,29 @@
 					</li>
 			</ul>
 		</nav>
+		<section class="card">
+			<div class="card__6">
+				<h1 class="card__title">
+					voluptates autem quia ab eos accusamus recusandae Inventore?
+				</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, adipisci laborum. Inventore recusandae et dicta? Quidem quod tempora autem suscipit? Necessitatibus, unde adipisci a voluptas porro dicta provident soluta aut!
+					Totam aperiam beatae facere praesentium. Ullam explicabo in pariatur, assumenda et blanditiis. Quod, illo? Excepturi fugiat repellat harum est magnam cupiditate adipisci voluptatibus iste eveniet itaque, id debitis, saepe doloremque?
+					Ipsa debitis est, animi quasi tempore beatae ullam nobis non quae autem voluptatibus totam voluptate soluta quidem incidunt amet excepturi doloremque a cupiditate temporibus nostrum molestias quas nesciunt. Voluptas, nisi.
+					Voluptatem tempora libero maxime pariatur in atque! Velit molestias nihil placeat a asperiores sunt vel, nam architecto ut voluptatibus, quia suscipit saepe labore impedit quas numquam dignissimos, ullam corrupti error.
+					Fugiat suscipit perferendis cupiditate facere dicta. Consequuntur eveniet fugit sed ipsam quisquam nulla quae, in maiores ipsum. Possimus, optio magni. Facere dolorum aliquam nostrum soluta in nemo facilis non itaque.
+					Ullam ut perspiciatis quos nihil facere porro, quas atque labore quasi veritatis eos molestiae id voluptas rem optio illo molestias consectetur quod numquam, iure ea odio eveniet quaerat. Neque, praesentium?
+					Fugit cumeprehenderit, nesciunt cupiditate voluptates eaque iusto hic necessitatibus aliquid at nulla alias! Labore ipsam cumque quo odio pariatur culpa delectus sint quod hic omnis vitae alias necessitatibus, nemo officia!
+					Hic voluptas odio aperiam, consequatur repellendus eum saepe quos cumque voluptatum excepturi. At dolor illum eveniet odit. Ea mollitia illum magnam! In eveniet asperiores doloremque molestias quibusdam, modi ducimus aspernatur.</p>
+			</div>
+			<div class="card__2">
+					<h1 class="card__title">
+						Lorem ipsum dolor
+					</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, adipisci laborum, adipisci laborum. Inventore recusandae et dicta? Quidem quod tempora autem suscipit? Necessitatibus, unde adipisci a voluptas porro dicta provident soluta aut!
+						Totam aperiampiciatis quos nihil facere porro, quas atque labore quasi veritatis eos molestiae id voluptas rem optio illo molestias consectetur quod numquam, iure ea odio eveniet quaerat. Neque, praesentium?
+						re porro, quas, dolor sit amet iure  adipisicing elit ea odio eveniet quaerat. Neque, praesentium?
+			</div>
+		</section>
 	</main>
 </body>
 </html>
