--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Teste de layout</title>
+	<title>Simple RWD</title>
 	<link rel="stylesheet" href="./css/roboto.css">
 	<script defer src="./fonts/fontawesome-all.js"></script>
 	<link rel="stylesheet" href="./css/reset.css">
